{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 37,
  "lineage": "a35bce78-f465-e759-d0a5-bb2dd0f172b4",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:security-group/sg-0b4a3ec098a353889",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4a3ec098a353889",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65000
              }
            ],
            "name": "sandbox-eks-open",
            "name_prefix": "",
            "owner_id": "596780849713",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:internet-gateway/igw-060d0177ae294e6e1",
            "id": "igw-060d0177ae294e6e1",
            "owner_id": "596780849713",
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-060d0177ae294e6e1",
            "id": "r-rtb-0dae486c469032fc71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dae486c469032fc7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_internet_gateway.igw",
            "module.elliott_sandbox_vpc.aws_route_table.private_route_table",
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-060d0177ae294e6e1",
            "id": "r-rtb-0dae486c469032fc71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dae486c469032fc7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_internet_gateway.igw",
            "module.elliott_sandbox_vpc.aws_route_table.private_route_table",
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-060d0177ae294e6e1",
            "id": "r-rtb-0fa743a474ee2698d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa743a474ee2698d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_internet_gateway.igw",
            "module.elliott_sandbox_vpc.aws_route_table.public_route_table",
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:route-table/rtb-0dae486c469032fc7",
            "id": "rtb-0dae486c469032fc7",
            "owner_id": "596780849713",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060d0177ae294e6e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:route-table/rtb-0fa743a474ee2698d",
            "id": "rtb-0fa743a474ee2698d",
            "owner_id": "596780849713",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060d0177ae294e6e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d80bfcd1ce9c4a96",
            "route_table_id": "rtb-0dae486c469032fc7",
            "subnet_id": "subnet-0ce8b592dd8d6dbf2"
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_route_table.private_route_table",
            "module.elliott_sandbox_vpc.aws_subnet.private_k8_subnets",
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.data.aws_availability_zones.available",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f7c4a49d89f0932",
            "route_table_id": "rtb-0dae486c469032fc7",
            "subnet_id": "subnet-07ae1f50e0fb35ec8"
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_route_table.private_route_table",
            "module.elliott_sandbox_vpc.aws_subnet.private_k8_subnets",
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.data.aws_availability_zones.available",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087e4535d38c9ca3c",
            "route_table_id": "rtb-0fa743a474ee2698d",
            "subnet_id": "subnet-025caa683a4fa9867"
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_route_table.public_route_table",
            "module.elliott_sandbox_vpc.aws_subnet.public_k8_subnets",
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.data.aws_availability_zones.available",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00227de741705405d",
            "route_table_id": "rtb-0fa743a474ee2698d",
            "subnet_id": "subnet-05c033c1a04674ca3"
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_route_table.public_route_table",
            "module.elliott_sandbox_vpc.aws_subnet.public_k8_subnets",
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.data.aws_availability_zones.available",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:security-group/sg-080565598ebda4133",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080565598ebda4133",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65000
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "596780849713",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "referenced_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:security-group/sg-0b5b69206a8d1775f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5b69206a8d1775f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-080565598ebda4133"
                ],
                "self": false,
                "to_port": 65000
              }
            ],
            "name": "referenced_sg",
            "name_prefix": "",
            "owner_id": "596780849713",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_security_group.public_sg",
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_k8_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:subnet/subnet-0ce8b592dd8d6dbf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.40.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce8b592dd8d6dbf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596780849713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.data.aws_availability_zones.available",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:subnet/subnet-07ae1f50e0fb35ec8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.40.1.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ae1f50e0fb35ec8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596780849713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.data.aws_availability_zones.available",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_k8_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:subnet/subnet-025caa683a4fa9867",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.40.1.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025caa683a4fa9867",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596780849713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.data.aws_availability_zones.available",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:subnet/subnet-05c033c1a04674ca3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.40.1.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c033c1a04674ca3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596780849713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0a45675d7fb8a216f"
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.aws_vpc.elliott-k8s-vpc",
            "module.elliott_sandbox_vpc.data.aws_availability_zones.available",
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.elliott_sandbox_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "elliott-k8s-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596780849713:vpc/vpc-0a45675d7fb8a216f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-004643de49d8252f0",
            "default_route_table_id": "rtb-0ea6ac716257b5faf",
            "default_security_group_id": "sg-0229263a5381f9ba5",
            "dhcp_options_id": "dopt-05e3267fba38b3a66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a45675d7fb8a216f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea6ac716257b5faf",
            "owner_id": "596780849713",
            "tags": {
              "Name": "elliott-k8s-7"
            },
            "tags_all": {
              "Name": "elliott-k8s-7"
            }
          },
          "dependencies": [
            "module.elliott_sandbox_vpc.random_integer.rand_int"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}